--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
 		<title>CRAY Homepage</title>
+		<link rel="shortcut icon" href="Assets/favicon.ico">
 	</head>
 	<body>
 	
