--- a/about.html
+++ b/about.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>About</title>
-<link rel="stylesheet" href="../css/aboutstylesheet.css">
-<link rel="script" href="js/aboutscript.js">
+<link rel="stylesheet" href="css/aboutstylesheet.css">
 <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
 </head>
@@ -20,19 +19,19 @@
 				<nav> 
 					<ul class="navbar">
 						<li>
-							<a href="index.html">Home</a>
+							<a href="html/index.html">Home</a>
 						</li>
 						<li>
-							<a href="music.html">Music</a>
+							<a href="html/music.html">Music</a>
 						</li>
 						<li>
-							<a href="about.html">About</a>
+							<a href="html/about.html">About</a>
 						</li>
 						<li>
-							<a href="store.html">Store</a>
+							<a href="html/store.html">Store</a>
 						</li>
 						<li>
-							<a href="demo.html">DEMO</a>
+							<a href="html/demo.html">DEMO</a>
 						</li>
 					</ul>
 				</nav>
@@ -100,7 +99,7 @@
 <section>
 	
 	<div>
-		<img src="../Assets/hardsummer.jpg" id="hard">
+		<img src="Assets/hardsummer.jpg" id="hard">
 	</div>
 	
 	<div id="info">
@@ -114,7 +113,7 @@
 	</div>
 	
 	<div>
-		<img src="../Assets/mainimg.jpg" id="main">
+		<img src="Assets/mainimg.jpg" id="main">
 	</div>
 
 </section>
