--- a/store.html
+++ b/store.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../css/storestylesheet.css">
-<link rel="script" href="../js/storescript.js">
+<link rel="stylesheet" href="css/storestylesheet.css">
+<link rel="script" href="js/storescript.js">
 <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
@@ -110,47 +110,47 @@
 		<ul class="products">
 		<li>
 			<a href="#" class="item">
-				<img src="../Assets/cray_shirt_black.png" />
-				<div class="priceHolder">
-					<p class="title" data="15">CRAY Black Shirt</p>
-					<p>Price:£15</p>
-				</div>
+				<img src="Assets/cray_shirt_black.png" width="240" height="240" alt=""/>
+<div class="priceHolder">
+			<p class="title" data="15">CRAY Black Shirt</p>
+			<p>Price:£15</p>
+		  </div>
 			</a>
 		</li>
 		<li>
 			<a href="#" class="item">
-				<img src="../Assets/cray_shirt_white.png" />
-				<div class="priceHolder">
-					<p class="title" data="15">CRAY White Shirt</p>
-					<p>Price:£15</p>
-				</div>
+				<img src="Assets/cray_shirt_white.png" width="240" height="240" alt=""/>
+<div class="priceHolder">
+			<p class="title" data="15">CRAY White Shirt</p>
+			<p>Price:£15</p>
+		  </div>
 			</a>
 		</li>
 		<li>
 			<a href="#" class="item">
-				<img src="../Assets/one_of_us.png" />
-				<div class="priceHolder">
-					<p class="title" data="15">One of us T Shirt</p>
-					<p>Price:£15</p>
-				</div>
+				<img src="Assets/one_of_us.png" width="240" height="240" alt=""/>
+<div class="priceHolder">
+			<p class="title" data="15">One of us T Shirt</p>
+			<p>Price:£15</p>
+		  </div>
 			</a>
 		</li>
 		<li>
 			<a href="#" class="item">
-				<img src="../Assets/hat.png" />
-				<div class="priceHolder">
-					<p class="title" data="10">Hat</p>
-					<p>Price:£10</p>
-				</div>
+				<img src="Assets/hat.png" width="240" height="240" alt=""/>
+<div class="priceHolder">
+			<p class="title" data="10">Hat</p>
+			<p>Price:£10</p>
+		  </div>
 			</a>
 		</li>
 		<li>
 			<a href="#" class="item">
-				<img src="../Assets/sticker.png" />
-				<div class="priceHolder">
-					<p class="title" data="1">Sticker</p>
-					<p>Price:£1</p>
-				</div>
+				<img src="Assets/sticker.png" width="240" height="240" alt=""/>
+<div class="priceHolder">
+			<p class="title" data="1">Sticker</p>
+			<p>Price:£1</p>
+		  </div>
 			</a>
 		</li>
 		</ul>
@@ -166,8 +166,8 @@
 		</div>
 		<div>
 				<button id="clear" onClick="clearCart()">Clear Cart</button>
-			</div>
-		<p class="total">Total: £<span id="totalPrice"></span></p>
+	  </div>
+	  <p class="total">Total: £<span id="totalPrice"></span></p>
 		<h2>Drop here to add to cart</h2>
 	</div>
 
