--- a/about.html
+++ b/about.html
@@ -19,19 +19,19 @@
 				<nav> 
 					<ul class="navbar">
 						<li>
-							<a href="html/index.html">Home</a>
+							<a href="index.html">Home</a>
 						</li>
 						<li>
-							<a href="html/music.html">Music</a>
+							<a href="music.html">Music</a>
 						</li>
 						<li>
-							<a href="html/about.html">About</a>
+							<a href="about.html">About</a>
 						</li>
 						<li>
-							<a href="html/store.html">Store</a>
+							<a href="store.html">Store</a>
 						</li>
 						<li>
-							<a href="html/demo.html">DEMO</a>
+							<a href="demo.html">DEMO</a>
 						</li>
 					</ul>
 				</nav>
