--- a/music.html
+++ b/music.html
@@ -35,7 +35,7 @@
 							<a href="store.html">Store</a>
 						</li>
 						<li>
-							<a href="demo.html">DEMO</a>
+							<a href="DEMO.html">DEMO</a>
 						</li>
 					</ul>
 				</nav>
