--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 							<a href="store.html">Store</a>
 						</li>
 						<li>
-							<a href="demo.html">DEMO</a>
+							<a href="DEMO.html">DEMO</a>
 						</li>
 					</ul>
 				</nav>
