--- a/DEMO.html
+++ b/DEMO.html
@@ -3,8 +3,10 @@
 <head>
 <meta charset="utf-8">
 <title>DEMO</title>
-</head>
+<link rel="shortcut icon" href="Assets/favicon.ico">
 <link rel="stylesheet" href="css/DEMO.css">
+</head>
+
 <body>
 
 	<section>
