--- a/store.html
+++ b/store.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" type="text/css" href="http://www.jeasyui.com/easyui/themes/default/easyui.css">
 	<link rel="stylesheet" type="text/css" href="http://www.jeasyui.com/easyui/themes/icon.css">
 <title>Store</title>
+<link rel="shortcut icon" href="Assets/favicon.ico">
 </head>
 
 <body>
