--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="css/aboutstylesheet.css">
 <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
+<link rel="shortcut icon" href="Assets/favicon.ico">
 </head>
 
 <body>
