--- a/about.html
+++ b/about.html
@@ -100,7 +100,7 @@
 <section>
 	
 	<div>
-		<img src="Assets/hardsummer.jpg" id="hard">
+		<img src="Assets/hardsummer.jpg" id="hard" alt="">
 	</div>
 	
 	<div id="info">
@@ -114,7 +114,7 @@
 	</div>
 	
 	<div>
-		<img src="Assets/mainimg.jpg" id="main">
+		<img src="Assets/mainimg.jpg" id="main" alt="">
 	</div>
 
 </section>
