--- a/music.html
+++ b/music.html
@@ -107,9 +107,9 @@
 	
 		<div class="emotecontainer">
 
-			<div class="movingdiv1"><img src="Assets/1_1_.png" width="28" height="28" id="img1"/></div>
-			<div class="movingdiv2"><img src="Assets/1_1_.png" width="28" height="28" id="img2"/></div>
-			<div class="movingdiv3"><img src="Assets/1_1_.png" width="28" height="28" id="img3"/></div>
+			<div class="movingdiv1"><img src="Assets/1_1_.png" width="28" height="28" id="img1" alt=""/></div>
+			<div class="movingdiv2"><img src="Assets/1_1_.png" width="28" height="28" id="img2" alt=""/></div>
+			<div class="movingdiv3"><img src="Assets/1_1_.png" width="28" height="28" id="img3" alt=""/></div>
 		
 		</div>
 		
@@ -133,9 +133,9 @@
 		
 		<div class="emotecontainer">
 		
-			<div class="movingdiv4"><img src="Assets/1_1_.png" width="28" height="28" id="img4"/></div>
-			<div class="movingdiv5"><img src="Assets/1_1_.png" width="28" height="28" id="img5"/></div>
-			<div class="movingdiv6"><img src="Assets/1_1_.png" width="28" height="28" id="img6"/></div>
+			<div class="movingdiv4"><img src="Assets/1_1_.png" width="28" height="28" id="img4" alt=""/></div>
+			<div class="movingdiv5"><img src="Assets/1_1_.png" width="28" height="28" id="img5" alt=""/></div>
+			<div class="movingdiv6"><img src="Assets/1_1_.png" width="28" height="28" id="img6" alt=""/></div>
 			
 		</div>
 
@@ -155,15 +155,15 @@
 				<div id="content">
 
 					<h2 id="menuh2">Emote Menu</h2>
-					<img src="Assets/1.png" width="28" height="28" class="emote" onclick="changeEmote1()"/>
-    		    	<img src="Assets/1_1_.png" width="28" height="28" class="emote" onclick="changeEmote2()"/>
-	    	    	<img src="Assets/1_2_.png" width="28" height="28" class="emote" onclick="changeEmote3()"/>
-   	    	    	<img src="Assets/1_3_.png" width="28" height="28" class="emote" onclick="changeEmote4()"/> 
-   	    	    	<img src="Assets/1_4_.png" width="28" height="28" class="emote" onclick="changeEmote5()"/>
-   	    	    	<img src="Assets/1_6_.png" width="28" height="28" class="emote" onclick="changeEmote6()"/>
-   	    	    	<img src="Assets/1_8_.png" width="28" height="28" class="emote" onclick="changeEmote7()"/> 
-   	    	    	<img src="Assets/1_9_.png" width="28" height="28" class="emote" onclick="changeEmote8()"/>
-   	    	    	<img src="Assets/1_10_.png" width="28" height="28" class="emote" onclick="changeEmote9()"/>
+					<img src="Assets/1.png" width="28" height="28" class="emote" onclick="changeEmote1()" alt=""/>
+    		    	<img src="Assets/1_1_.png" width="28" height="28" class="emote" onclick="changeEmote2()" alt=""/>
+	    	    	<img src="Assets/1_2_.png" width="28" height="28" class="emote" onclick="changeEmote3()" alt=""/>
+   	    	    	<img src="Assets/1_3_.png" width="28" height="28" class="emote" onclick="changeEmote4()" alt=""/> 
+   	    	    	<img src="Assets/1_4_.png" width="28" height="28" class="emote" onclick="changeEmote5()" alt=""/>
+   	    	    	<img src="Assets/1_6_.png" width="28" height="28" class="emote" onclick="changeEmote6()" alt=""/>
+   	    	    	<img src="Assets/1_8_.png" width="28" height="28" class="emote" onclick="changeEmote7()" alt=""/> 
+   	    	    	<img src="Assets/1_9_.png" width="28" height="28" class="emote" onclick="changeEmote8()" alt=""/>
+   	    	    	<img src="Assets/1_10_.png" width="28" height="28" class="emote" onclick="changeEmote9()" alt=""/>
    	    	    	
    	    	    </div>
 
