--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"   />
 		<link rel="stylesheet" href="css/stylesheet.css">
-		<link rel="script" href="js/script.js">
+		<link rel="" href="js/script.js">
 		<link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Arimo" rel="stylesheet">
 		<title>CRAY Homepage</title>
@@ -12,12 +12,11 @@
 	<body>
 	
 		
-		<section id="homesection">
+		
 			<!--The first image-->
 			<img src="Assets/19441867_1179264792179600_5596792639862162982_o.jpg" id="topimg" alt="">
-			
-		</section>
-		<section>
+		
+		
 			<header id="header">
 				<!--The navigation menu -->
 				<div id="nav">
@@ -102,9 +101,9 @@
 			
 			</header>
 			
-		</section>
 		
-		<section id="slider">
+		
+		
 			
 			
 			<div class="container">
@@ -114,10 +113,10 @@
 			</div>
 		
 			
-		</section>
+	
 		
 		
 		
 		
-	</body>
+</body>
 </html>
