--- a/DEMO.html
+++ b/DEMO.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>DEMO</title>
+<title>DEMO and Log</title>
 <link rel="shortcut icon" href="Assets/favicon.ico">
 <link rel="stylesheet" href="css/DEMO.css">
 </head>
@@ -29,7 +29,7 @@
 							<a href="store.html">Store</a>
 						</li>
 						<li>
-							<a href="DEMO.html">DEMO</a>
+							<a href="DEMO.html">DEMO and Log</a>
 						</li>
 					</ul>
 				</nav>
@@ -100,11 +100,116 @@
 			</header>
 		
 		
+		<div id="demovid">
+			<!--The embedded youtube video-->
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/qirFcYNRC7s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			
+		</div>
 		
-		<!--The embedded youtube video-->
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/qirFcYNRC7s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		<div id="kiddo">
 		
+				<img src="Assets/reportimg.jpg">
+		
+		</div>
 	
+		<div id="pdf"> 
+			
+			<h1>CMP1130M - Web Authoring</h1>
+			
+			<h3>17643078</h3>
+			
+			<p>Rowan Reed | Web Authoring | 11/12/2017</p>
+			
+			<p>https://rowanreed.github.io/.io/</p>
+			
+			<h2>Introduction</h2>
+			
+			<p>In this report I will be giving overview of how my project complies with many web
+specifications and standards. I will be looking at what markup languages have been
+used within my project and how effective they have been. Alongside the markup
+languages I will be looking at stylesheets. These worked in tandem with the markup
+languages. I will also be talking about the naming conventions that I have used
+throughout the project.</p>
+			
+			<h2>Web Standards and Specifications</h2>
+			
+			<p>Web standards and specifications have offered developers a great way to keep their
+code compatible across the internet. W3C is a great example of this because they
+make sure that web development is done in a suitable fashion to fit all devices. This
+has led to a much better experience for all the users because a lot of the content
+which is available can be accessed by anyone. Using the same markup languages has
+meant that sites can stay relevant on the internet without having to change the code
+that is being used.
+The downside to having these web standards is that developer knowledge can have a
+high upkeep. This means that the developer constantly must be adapting to the new
+standards that are introduced. Another drawback is that the developers must know the
+issues that come with using the popular browsers and how to overcome these issues.
+Overall in comparison to previous standards It has been a great transition because it
+includes the forward compatibility. Forward compatibility has meant that sites can
+stay on the web without having to make changes. Depending on whether the site
+needs to stay visible on search engines will then determine whether the site code is
+changed. (Jones, 2004-18)</p>
+			
+			<h2>Techniques I have used</h2>
+			
+			<p>A standard incorporated was SVG so that I could create small images which would
+make up the links within my social networks section. These SVG’s were useful because
+it meant that I could get the social links to look like the actual website icons. Within
+JavaScript I used the localStorage function which was important when looking at the
+store page within my website. Using this function allows a user to save certain data to
+their machine so that it can be retrieved if they move onto a different page of the
+website. Using an array of the basket which contained the product data and then two
+JSON functions it will allow you two save the data to the localStorage and then retain
+it when going back on the page. The two functions which were used included the
+.stringify and .parse functions to make the data readable for the localStorage and then
+convert it back using the .parse. </p>
+			
+			<h2>Site Interoperability</h2>
+			
+			<p>Google Chrome:</p>
+			
+			<img src="Assets/chromehome.png">
+			
+			<p>Microsoft Edge:</p>
+			
+			<img src="Assets/edgehome.png">
+			
+			<p>Mozilla Firefox:</p>
+			
+			<img src="Assets/firefoxhome.png">
+			
+			<p>These images show compatibility with the browsers that the webpage is being run in
+which is good because it will open it up to be a more interoperable site.</p>
+			
+			<h2>Best Practice</h2>
+			
+			<p>File Organisation</p> 
+			
+			<img src="Assets/html.png">
+			
+			<img src="Assets/assets.png">
+			
+			<img src="Assets/css.png">
+			
+			<p>W3C Validation</p>
+			
+			<img src="Assets/validation.png">
+			
+			<p>For the errors that are shown within these images the music and DEMO pages relate to
+the embedded items that are in my site, so I couldn’t change these items without change
+how these items worked. The store page had a problem with the attributes that had been
+used but they contained data that links with the JavaScript and jQuery that had been
+produced. 
+</p>
+			
+			<h2>Bibliography</h2>
+			
+			<p>Jones, R., 2004-18. romjon.com. [Online]
+Available at: http://romjon.com/briefing/web-standards
+[Accessed 9 January 2018].</p>
+			
+			
+		</div>
 
 </body>
 </html>
