--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<a href="store.html">Store</a>
 						</li>
 						<li>
-							<a href="DEMO.html">DEMO</a>
+							<a href="DEMO.html">DEMO and Log</a>
 						</li>
 					</ul>
 				</nav>
