--- a/music.html
+++ b/music.html
@@ -36,7 +36,7 @@
 							<a href="store.html">Store</a>
 						</li>
 						<li>
-							<a href="DEMO.html">DEMO</a>
+							<a href="DEMO.html">DEMO and Log</a>
 						</li>
 					</ul>
 				</nav>
