--- a/about.html
+++ b/about.html
@@ -110,21 +110,21 @@
 		<p> CRAY moved to Los Angeles in order to seek better opportunities for her music and gaming career. She has since played at Brownies and Lemonade shows as well as the main stage at HARD Summer which takes place Glen Helen Regional Park. Cheney has been playing video games since her childhood and has made her passion for gaming apart of her brand. She hopes to combines music and gaming in her future career, and has gotten a start DJing major gaming events such as Dreamhack and E3. <a href="https://everipedia.org/wiki/cray-music/"> [1]</a> </p>
 		
 		<h3>HARD Summer Location:</h3>
-		
+		<!--Geolocation -->
 		<div id="googleMap" style="width:100%;height:400px;"></div>
 		<br>
 
-<script>
-function myMap() {
-var mapProp= {
-    center:new google.maps.LatLng(34.20778,-117.40589),
-    zoom:14,
-};
-var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-}
-</script>
+		<script>
+		function myMap() {
+		var mapProp= {
+			center:new google.maps.LatLng(34.20778,-117.40589),
+			zoom:14,
+		};
+		var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+		}
+		</script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDB4yrVqHbMuLW2zEwp-hZS6pZsjJbYu2w&callback=myMap"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDB4yrVqHbMuLW2zEwp-hZS6pZsjJbYu2w&callback=myMap"></script>
 	</div>
 	
 	<div>
